--- a/src/components/category-item/category-item.styles.scss
+++ b/src/components/category-item/category-item.styles.scss
@@ -17,7 +17,7 @@
         transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
       }
   
-      & .category-body-container {
+      & .category-text-container {
         opacity: 0.9;
       }
     }
@@ -41,7 +41,7 @@
       background-position: center;
     }
   
-    .category-body-container {
+    .category-text-container {
       height: 90px;
       padding: 0 25px;
       display: flex;
